<resources>
    <string name="app_name">Beadie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ratings">Ratings</string>
    <string name="_4_5">4.5</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_order">My Order</string>
    <string name="menu_my_order_history">Order History</string>
    <string name="menu_my_wish_list">My Wishlist</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wishlist">Wishlist</string>
    <string name="_detail_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="related_products">Related Products</string>
    <string name="product_images">List of product images</string>


    <string name="error_description">Description missing</string>
    <string name="error_title">Title missing</string>
    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Passwords do not match or do not meet the requirements</string>
    <string name="increase_item_quantity">Increase item quantity</string>
    <string name="decrease_item_quantity">Decrease item quantity</string>
    <string name="clear_item_from_cart">Clear Item from Cart</string>
    <string name="total_amount">Total amount:</string>
    <string name="check_out">CHECK OUT</string>
    <string name="empty_list">There\'s nothing here!</string>
    <string name="add_all_to_cart">Add All to Cart</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_headline">Login to shop in your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="developer">Powered by 8bits</string>
    <string name="invalid_name">Please enter a valid name format.</string>
</resources>