<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/myCartFragment"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_my_cart" />
        <item
            android:id="@+id/myWishListFragment"
            android:icon="@drawable/ic_fav_active"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/myOrderFragment"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_my_order" />
        <item
            android:id="@+id/myOrderHistoryFragment"
            android:icon="@drawable/ic_order_history"
            android:title="@string/menu_my_order_history" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>